[package]

name = "grust"
version = "0.3.1-dev"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
license = "LGPL-2.1+"
readme = "README.md"
keywords = ["GObjectIntrospection", "GLib", "GObject", "GNOME"]

description = """GObjectIntrospection bindings for Rust.
This is the core library providing basic functionality to all
generated crates.
"""

repository = "https://github.com/gi-rust/grust.git"

[dependencies]
libc = "0.1"
gtypes = "0.1"
glib-2-0-sys = "0.46"
gobject-2-0-sys = "0.46"
