[package]

name = "grust"
version = "0.4.0-dev"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
license = "LGPL-2.1+"
readme = "README.md"
keywords = ["GObjectIntrospection", "GLib", "GObject", "GNOME"]

description = """GObjectIntrospection bindings for Rust.
This is the core library providing basic functionality to all
generated crates.
"""

repository = "https://github.com/gi-rust/grust.git"

[dependencies]
gtypes = "0.2"
libc = "0.2"

[dependencies.glib-2-0-sys]
git = "https://github.com/gi-rust/glib-sys.git"

[dependencies.gobject-2-0-sys]
git = "https://github.com/gi-rust/gobject-sys.git"
